# ledgerbook

./: .gitignore  README.md  finance.js  index.html  package-lock.json  package.json  script.js  styles.css
.github/workflows/: release.yml
backend/: README.md  crud.py  database.py  main.py  models.py  requirements.txt  schemas.py
desktop/tauri/: README.md
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/ui/js/: api.js  api_adapter.js  collateral.js  data_io.js  finance_proxy.js
desktop/tauri/ui/styles/: responsive.css
js/: collateral.js  csv.js  customers.js  dashboard.js  data_io.js  db.js  dom.js  filtering.js  import_export.js  rates.js  storage.js  transactions.js  utils.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/js/: api_adapter.js  csv.js  customers.js  dashboard.js  dom.js  filtering.js  import_export.js  rates.js  script.js  transactions.js  utils.js
src/styles/: base.css  components.css
styles/: base.css  components.css  responsive.css
