[package]
name = "ledgerbook-tauri"
version = "0.1.0"
description = "Lending Ledger Tauri app"
authors = ["Ledgerbook"]
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }



[features]
# Tauri CLI passes --features custom-protocol during build; wire it to tauri's feature
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

